src/Tools/SEGGER_RTT.nim


  ## ********************************************************************
  ##
  ##        RTT API functions
  ##
  ## *********************************************************************
  ##
  proc SEGGER_RTT_AllocDownBuffer*(sName: cstring; pBuffer: pointer;
                                  BufferSize: cuint; Flags: cuint): cint {.
      importc: "SEGGER_RTT_AllocDownBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_AllocUpBuffer*(sName: cstring; pBuffer: pointer; BufferSize: cuint;
                                Flags: cuint): cint {.
      importc: "SEGGER_RTT_AllocUpBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_ConfigUpBuffer*(BufferIndex: cuint; sName: cstring;
                                 pBuffer: pointer; BufferSize: cuint; Flags: cuint): cint {.
      importc: "SEGGER_RTT_ConfigUpBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_ConfigDownBuffer*(BufferIndex: cuint; sName: cstring;
                                   pBuffer: pointer; BufferSize: cuint; Flags: cuint): cint {.
      importc: "SEGGER_RTT_ConfigDownBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_GetKey*(): cint {.importc: "SEGGER_RTT_GetKey",
                                 header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_HasData*(BufferIndex: cuint): cuint {.
      importc: "SEGGER_RTT_HasData", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_HasKey*(): cint {.importc: "SEGGER_RTT_HasKey",
                                 header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_HasDataUp*(BufferIndex: cuint): cuint {.
      importc: "SEGGER_RTT_HasDataUp", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_Init*() {.importc: "SEGGER_RTT_Init", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_Read*(BufferIndex: cuint; pBuffer: pointer; BufferSize: cuint): cuint {.
      importc: "SEGGER_RTT_Read", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_ReadNoLock*(BufferIndex: cuint; pData: pointer; BufferSize: cuint): cuint {.
      importc: "SEGGER_RTT_ReadNoLock", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_SetNameDownBuffer*(BufferIndex: cuint; sName: cstring): cint {.
      importc: "SEGGER_RTT_SetNameDownBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_SetNameUpBuffer*(BufferIndex: cuint; sName: cstring): cint {.
      importc: "SEGGER_RTT_SetNameUpBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_SetFlagsDownBuffer*(BufferIndex: cuint; Flags: cuint): cint {.
      importc: "SEGGER_RTT_SetFlagsDownBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_SetFlagsUpBuffer*(BufferIndex: cuint; Flags: cuint): cint {.
      importc: "SEGGER_RTT_SetFlagsUpBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_WaitKey*(): cint {.importc: "SEGGER_RTT_WaitKey",
                                  header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_Write*(BufferIndex: cuint; pBuffer: pointer; NumBytes: cuint): cuint {.
      importc: "SEGGER_RTT_Write", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_WriteNoLock*(BufferIndex: cuint; pBuffer: pointer; NumBytes: cuint): cuint {.
      importc: "SEGGER_RTT_WriteNoLock", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_WriteSkipNoLock*(BufferIndex: cuint; pBuffer: pointer;
                                  NumBytes: cuint): cuint {.
      importc: "SEGGER_RTT_WriteSkipNoLock", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_ASM_WriteSkipNoLock*(BufferIndex: cuint; pBuffer: pointer;
                                      NumBytes: cuint): cuint {.
      importc: "SEGGER_RTT_ASM_WriteSkipNoLock", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_WriteString*(BufferIndex: cuint; s: cstring): cuint {.
      importc: "SEGGER_RTT_WriteString", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_WriteWithOverwriteNoLock*(BufferIndex: cuint; pBuffer: pointer;
      NumBytes: cuint) {.importc: "SEGGER_RTT_WriteWithOverwriteNoLock",
                       header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_PutChar*(BufferIndex: cuint; c: char): cuint {.
      importc: "SEGGER_RTT_PutChar", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_PutCharSkip*(BufferIndex: cuint; c: char): cuint {.
      importc: "SEGGER_RTT_PutCharSkip", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_PutCharSkipNoLock*(BufferIndex: cuint; c: char): cuint {.
      importc: "SEGGER_RTT_PutCharSkipNoLock", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_GetAvailWriteSpace*(BufferIndex: cuint): cuint {.
      importc: "SEGGER_RTT_GetAvailWriteSpace", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_GetBytesInBuffer*(BufferIndex: cuint): cuint {.
      importc: "SEGGER_RTT_GetBytesInBuffer", header: "SEGGER_RTT.h".}
  ## ********************************************************************
  ##
  ##        RTT transfer functions to send RTT data via other channels.
  ##
  ## *********************************************************************
  ##
  proc SEGGER_RTT_ReadUpBuffer*(BufferIndex: cuint; pBuffer: pointer;
                               BufferSize: cuint): cuint {.
      importc: "SEGGER_RTT_ReadUpBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_ReadUpBufferNoLock*(BufferIndex: cuint; pData: pointer;
                                     BufferSize: cuint): cuint {.
      importc: "SEGGER_RTT_ReadUpBufferNoLock", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_WriteDownBuffer*(BufferIndex: cuint; pBuffer: pointer;
                                  NumBytes: cuint): cuint {.
      importc: "SEGGER_RTT_WriteDownBuffer", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_WriteDownBufferNoLock*(BufferIndex: cuint; pBuffer: pointer;
                                        NumBytes: cuint): cuint {.
      importc: "SEGGER_RTT_WriteDownBufferNoLock", header: "SEGGER_RTT.h".}
  ## ********************************************************************
  ##
  ##        RTT "Terminal" API functions
  ##
  ## *********************************************************************
  ##
  proc SEGGER_RTT_SetTerminal*(TerminalId: cuchar): cint {.
      importc: "SEGGER_RTT_SetTerminal", header: "SEGGER_RTT.h".}
  proc SEGGER_RTT_TerminalOut*(TerminalId: cuchar; s: cstring): cint {.
      importc: "SEGGER_RTT_TerminalOut", header: "SEGGER_RTT.h".}
  ## ********************************************************************
  ##
  ##        RTT printf functions (require SEGGER_RTT_printf.c)
  ##
  ## *********************************************************************
  ##
  proc SEGGER_RTT_printf*(BufferIndex: cuint; sFormat: cstring): cint {.varargs,
      importc: "SEGGER_RTT_printf", header: "SEGGER_RTT.h".}
## ********************************************************************
##
##        Defines
##
## *********************************************************************
##
##
##  Operating modes. Define behavior if buffer is full (not enough space for entire message)
##

const
  SEGGER_RTT_MODE_NO_BLOCK_SKIP* = (0) ##  Skip. Do not block, output nothing. (Default)
  SEGGER_RTT_MODE_NO_BLOCK_TRIM* = (1) ##  Trim: Do not block, output as much as fits.
  SEGGER_RTT_MODE_BLOCK_IF_FIFO_FULL* = (2) ##  Block: Wait until there is space in the buffer.
  SEGGER_RTT_MODE_MASK* = (3)

when not defined(SEGGER_RTT_MODE_DEFAULT):
  const
    SEGGER_RTT_MODE_DEFAULT* = SEGGER_RTT_MODE_NO_BLOCK_SKIP
##
##  Control sequences, based on ANSI.
##  Can be used to control color, and clear the screen
##

const
  RTT_CTRL_RESET* = "\e[0m"
  RTT_CTRL_CLEAR* = "\e[2J"
  RTT_CTRL_TEXT_BLACK* = "\e[2;30m"
  RTT_CTRL_TEXT_RED* = "\e[2;31m"
  RTT_CTRL_TEXT_GREEN* = "\e[2;32m"
  RTT_CTRL_TEXT_YELLOW* = "\e[2;33m"
  RTT_CTRL_TEXT_BLUE* = "\e[2;34m"
  RTT_CTRL_TEXT_MAGENTA* = "\e[2;35m"
  RTT_CTRL_TEXT_CYAN* = "\e[2;36m"
  RTT_CTRL_TEXT_WHITE* = "\e[2;37m"
  RTT_CTRL_TEXT_BRIGHT_BLACK* = "\e[1;30m"
  RTT_CTRL_TEXT_BRIGHT_RED* = "\e[1;31m"
  RTT_CTRL_TEXT_BRIGHT_GREEN* = "\e[1;32m"
  RTT_CTRL_TEXT_BRIGHT_YELLOW* = "\e[1;33m"
  RTT_CTRL_TEXT_BRIGHT_BLUE* = "\e[1;34m"
  RTT_CTRL_TEXT_BRIGHT_MAGENTA* = "\e[1;35m"
  RTT_CTRL_TEXT_BRIGHT_CYAN* = "\e[1;36m"
  RTT_CTRL_TEXT_BRIGHT_WHITE* = "\e[1;37m"
  RTT_CTRL_BG_BLACK* = "\e[24;40m"
  RTT_CTRL_BG_RED* = "\e[24;41m"
  RTT_CTRL_BG_GREEN* = "\e[24;42m"
  RTT_CTRL_BG_YELLOW* = "\e[24;43m"
  RTT_CTRL_BG_BLUE* = "\e[24;44m"
  RTT_CTRL_BG_MAGENTA* = "\e[24;45m"
  RTT_CTRL_BG_CYAN* = "\e[24;46m"
  RTT_CTRL_BG_WHITE* = "\e[24;47m"
  RTT_CTRL_BG_BRIGHT_BLACK* = "\e[4;40m"
  RTT_CTRL_BG_BRIGHT_RED* = "\e[4;41m"
  RTT_CTRL_BG_BRIGHT_GREEN* = "\e[4;42m"
  RTT_CTRL_BG_BRIGHT_YELLOW* = "\e[4;43m"
  RTT_CTRL_BG_BRIGHT_BLUE* = "\e[4;44m"
  RTT_CTRL_BG_BRIGHT_MAGENTA* = "\e[4;45m"
  RTT_CTRL_BG_BRIGHT_CYAN* = "\e[4;46m"
  RTT_CTRL_BG_BRIGHT_WHITE* = "\e[4;47m"

## ************************** End of file ***************************
